src/Components/Header/Header.css
header {
    background-color: #F1EFC6;
    min-height: 1010vh;
}

nav {
    display: flex;
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    justify-content: space-between;
    flex-direction: row-reverse;
}

.nav-items {
    list-style: none;
    display: flex;
    justify-content: space-between;
    align-items: center;
    gap: 20px;
    background-color: rgba(0, 0, 0, 0);
    transition: background-color 500ms;
}

.nav-item a {
    text-decoration: none;
    color: black;
    font-size: 20px;
}

.mob-nav-access {
    display: none;
    z-index: 10;
}

.mob-nav-access span {
    position: fixed;
    width: 35px;
    height: 4px;
    border-radius: 2px;
    background-color: black;
    transform-origin: 50% 50%;
    transition: transform 300ms;
}

.mob-nav-access.closed span:nth-child(2) {
    transform: translateY(15px);
}

.mob-nav-access.opened span:nth-child(2) {
    transform: translateY(7.5px) rotate(45deg);
}

.mob-nav-access.opened span:nth-child(1) {
    transform: translateY(7.5px) rotate(-45deg);
}

.animated-logo {
    z-index: 10;
}


@media screen and (max-width: 650px) {
    nav {
        display: flex;
        justify-content: space-between;
        align-items: center;
        padding: 40px;
    }

    .nav-item a {
        font-size: 25px;
    }
    
    .mob-nav-access {
        display: initial;
        right: 40px;
        top: 40px;
        width: 30px;
        height: 20px;
    }

    .mob-nav-access.opened ~ .nav-items {
        position: fixed;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        flex-direction: column;
        align-items: center;
        justify-content: center;
        gap: 35px;
        background-color: #A4D6AC;
    }

    .mob-nav-access.closed ~ .nav-items {
        display: none;
    }
}

